<resources>
    <string name="mapbox_access_token">
        pk.eyJ1IjoiaGF3YXdvYjQyNCIsImEiOiJja3N4N2FqNmkwMDl5MnZwOTY0end1czd0In0.zzBK2qxj_-ecFMccpgHqgw
    </string>
    <string name="preference_file_key">com.example.roadservice.ROAD_SERVICE</string>
    <string name="app_name">ساج</string>
    <string name="phone_number">تلفن همراه</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="register">ثبت‌نام</string>
    <string name="last_name">نام خانوادگی</string>
    <string name="first_name">نام</string>
    <string name="email_addreaa">آدرس ایمیل</string>
    <string name="repeat_password">تکرار رمز عبور</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="old_password">رمز عبور قدیمی</string>
    <string name="change">تغییر</string>
    <string name="report">گزارش</string>
    <string name="end_mission">پایان ماموریت</string>
    <string name="email">ایمیل</string>
    <string name="recover">بازیابی</string>
    <string name="weak">ضعیف</string>
    <string name="perfect">عالی</string>
    <string name="save">ثبت</string>
    <string name="what_score">وضعیت رسیدگی به مشکل اخیر خود را چه‌طور ارزیابی می‌کنید؟</string>
    <string name="location_picker_select_location_button_cancel">وللش</string>
    <string name="location_picker_select_location_button_select">انتخاب موقعیت</string>
    <string name="move_map_instruction">می‌توانید روی نقشه جابجا شوید</string>
    <string name="user_location_permission_explanation">برای ادامه نیاز به دسترسی به موقعیت مکانی است</string>
    <string name="user_location_permission_not_granted">دسترسی به موقعیت مکانی فراهم نیست</string>
    <string name="location">موقعیت مکانی</string>
    <string name="not_chosen">انتخاب نشده</string>
    <string name="change_location">تغییر</string>
    <string name="save_issue">ثبت مشکل</string>
    <string name="title">عنوان</string>
    <string name="chosen">انتخاب شده</string>
    <string name="description">توضیحات</string>
    <string name="location2">موقعیت مکانی</string>
    <string name="accept">قبول</string>
    <string name="reject">رد</string>
    <string name="required_teams">تیم‌های مورد نیاز</string>
    <string name="required_machines">ماشین‌آلات مورد نیاز</string>
    <string name="saveMission">ثبت ماموریت</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="preferred_object">شی مورد نظر</string>
    <string name="APP_NAME">امداد جاده‌ای</string>
    <string name="APP_MOTO">با هم جاده‌ها را بسازیم</string>
    <string name="forgot_password">رمز عبور خود را فراموش کرده‌اید؟</string>
    <string name="WELCOME_MSG">شما به عنوان فرهاد گل‌کلمیان وارد سامانه شده‌اید.</string>
    <string name="allowed_ops">فعالیت‌های مجاز</string>
    <string name="view_mission">مشاهده‌ی ماموریت</string>
    <string name="change_password">تغییر گذرواژه</string>
    <string name="issues_list">لیست مشکلات</string>
    <string name="review_issues">بررسی مشکلات</string>
    <string name="new_issue">مشکل جدید</string>
    <string name="current_issue">مشکل فعلی</string>
    <string name="rate_issue">ارزیابی کیفیت رفع مشکل</string>
    <string name="issue_image">Issue image</string>
    <string name="issue_details">ماموریت</string>
    <string name="mission_details">منابع</string>
    <string name="mission_report">گزارش</string>
    <string name="team_list">لیست تیم‌ها</string>
    <string name="machines_list">لیست ماشین‌آلات</string>
    <string name="mission_type">نوع ماموریت</string>
    <string name="revolutionary">سریع فوری انقلابی</string>
    <string name="number">عدد</string>
    <string name="no_mission_for_you">تمامی ماموریت‌هایتان به پایان رسیده‌اند.</string>
    <string name="dashboard">داشبورد</string>
    <string name="logout">خروج</string>
    <string name="sample_phone">۰۹۱۲۳۴۵۶۷۸۹</string>
    <string name="user_name">نام کاربر</string>
    <string name="discard">بی‌خیال</string>
    <string name="mission_done_image">All missions done</string>
    <string name="discard_mission">انصراف</string>
    <string name="category">دسته</string>
    <string name="network_error">مشکل در برقراری ارتباط</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="login_failed">مشخصات وارد شده نادرست است.</string>
    <string name="login_error_phone_length">تلفن همراه باید به شکل ۰۹xxxxxxxxx باشد.</string>
    <string name="error_required">پر کردن این مقدار ضروری است.</string>
    <string name="register_success_message">حساب کاربری شما با موفّقیّت ایجاد شد.</string>
    <string name="error_password_short">رمز عبور باید شامل حداقل ۱۲ کاراکتر باشد.</string>
    <string name="got_new_mission">ماموریت جدیدی به شما محوّل شده است.</string>
    <string name="got_new_issue">مشکل جدیدی گزارش شده است.</string>
    <string name="warn_future_behavior">هشدار: رفتار برنامه در ادامه دچار اختلال خواهد شد.</string>
    <string name="error_password_match">رمز عبور جدید و قدیمی نباید یکسان باشند.</string>
    <string name="error_password_mismatch">رمز عبورهای وارد شده مطابقت ندارند.</string>
    <string name="error_password_wrong">رمز عبور وارد شده اشتباه است.</string>
    <string name="error_rating">حداقل یک ستاره را انتخاب کنید.</string>
    <string name="error_issue_empty_title">عنوان مشکل را وارد کنید.</string>
    <string name="province">استان</string>
    <string name="county">شهرستان</string>
    <string name="iran">ایران</string>
    <string name="error_phone_duplicate">این تلفن همراه در سامانه ثبت شده است.</string>
    <string name="error_description_empty">در مورد مشکل توضیح دهید.</string>
    <string name="error_image_empty">تصویری برای مشکل انتخاب کنید.</string>
    <string name="error_report_empty">لطفا گزارش ماموریت را بنویسید.</string>
    <string name="submission_failure">مشکلی در ارسال اطّلاعات وجود دارد.</string>
    <string name="error_skills_empty">باید حداقل یک مهارت انتخاب کنید.</string>
</resources>