<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.issues.citizen.CitizenDashboardActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/WELCOME_MSG"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/allowed_ops"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gotoAddIssueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="gotoAddIssue"
        android:text="@string/new_issue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/gotoCurrentIssueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="gotoCurrentIssue"
        android:text="@string/current_issue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/gotoAddIssueBtn"
        app:layout_constraintTop_toBottomOf="@+id/gotoAddIssueBtn" />

    <Button
        android:id="@+id/gotoRateIssueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="gotoRateIssue"
        android:text="@string/rate_issue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/gotoCurrentIssueBtn"
        app:layout_constraintTop_toBottomOf="@+id/gotoCurrentIssueBtn" />

    <Button
        android:id="@+id/gotoChangePasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="gotoChangePassword"
        android:text="@string/change_password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/gotoCurrentIssueBtn"
        app:layout_constraintTop_toBottomOf="@+id/gotoRateIssueBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>