<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.issues.citizen.RateIssueFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginBottom="68dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:text="@string/what_score"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/issueRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/issueRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weak"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/issueRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/issueRatingBar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfect"
        android:textColor="#00AA00"
        app:layout_constraintEnd_toEndOf="@+id/issueRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/issueRatingBar" />

    <Button
        android:id="@+id/submitRateBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/save"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/issueRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/discardRateBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/issueRatingBar"
        app:layout_constraintTop_toTopOf="@+id/submitRateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>